syntax = "proto3";

package dev.mazuninky.distrrr;

enum JobStatus {
  WAITING = 0;
  PROCESSING = 1;
  COMPLETED = 2;
  CANCELED = 3;
  ERROR = 4;
}
